tests/ui/suggestions/issue-68049-1.stderr
error[E0594]: cannot assign to `self.0`, which is behind a `&` reference
  --> $DIR/issue-68049-1.rs:7:9
   |
LL |         self.0 += 1;
   |         ^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
